<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2026"
    android:onClick="expButton"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result_display"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:gravity="end"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceButton"
        android:backgroundTint="#F6465D"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_display"
        app:layout_constraintVertical_bias="0.94">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="clearText"
                android:backgroundTint="#2B3139"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="expButton"
                android:backgroundTint="#2B3139"
                android:text="@string/powerNotation" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:backgroundTint="#2B3139"
                android:layout_weight="1"
                android:onClick="parBTN"
                android:text="@string/oar" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:backgroundTint="#2B3139"
                android:layout_weight="1"
                android:onClick="divideButton"
                android:text="@string/divide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#2B3139"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightButton"
                android:backgroundTint="#2B3139"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="nineButton"
                android:backgroundTint="#2B3139"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="multiplyButton"
                android:backgroundTint="#2B3139"
                android:text="@string/multiplyingNotation" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:backgroundTint="#2B3139"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourButton"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:backgroundTint="#2B3139"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fiveButton"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:backgroundTint="#2B3139"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixButton"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:backgroundTint="#2B3139"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="substractButton"
                android:text="@string/substractNotation" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#2B3139"
                android:onClick="oneButton"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twoButton"
                android:backgroundTint="#2B3139"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#2B3139"
                android:onClick="threeButton"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="dotButton"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="divideButton"
                android:text="@string/percentageNotation" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="equalButton"
                android:text="@string/equal" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>